corrected overflow

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
   font-size: 16px;
   color: hsl(0, 0%, 0%);
   font-weight: 400;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   width: 100%;
 }
 
